--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		</div>
 		<div class="logo mobile">DREAMSHARE</div>
 		<div class="center"><h1>SHAPE YOUR <br> HOLIDAY DREAMS</h1>
-			<h4>And find the perfect partner to fullfill it</h4>
+			<h5>And find the perfect partner to fullfill it</h5	>
 			<button class="red-btn">Find your holiday partner</button>
 		</div>
 	</header>
 
 	<div class="content">
-		<h1>How Dreamshare works?</h1>
+		<h2>How Dreamshare works?</h2>
 		<div class="works">
 			<div class="works__card card1">
 					<button class="red-btn step">STEP 1</button>
@@ -33,7 +33,7 @@
 			</div>
 			<div class="works__card card2">
 					<button class="red-btn step">STEP 2</button>
-					<h2>Sed leo enim, condimentum</h2>
+					<h2>Morbi velit  risus</h2>
 					<p>Quiside libero, dictum non turpis in, luctus semperlorem. Donec rhoncus a leo sit amlet facilisis.</p>
 			</div>
 			<div class="works__card card3">
@@ -42,7 +42,7 @@
 					<p>Quiside libero, dictum non turpis in, luctus semperlorem. Donec rhoncus a leo sit amlet facilisis.</p>
 			</div>
 		</div>
-		<h1>Meet a partner for your best holiday</h1>
+		<h2>Meet a partner for your best holiday</h2>
 		<div class="partners">
 			<div class="partners__card">
 				<div class="partners__card__img">
@@ -50,7 +50,7 @@
 					<div class="partners__card__img__icon red-icon">
 					</div>
 				</div>
-				<h2>Bradley Hunter</h2>
+				<h4>Bradley Hunter</h4>
 				<p>Based in Chickago I love playing tennis and loud music</p>
 			</div>
 			<div class="partners__card">
@@ -59,7 +59,7 @@
 					<div class="partners__card__img__icon green-icon">
 					</div>
 				</div>
-				<h2>Heather Walker</h2>
+				<h4>Heather Walker</h4>
 				<p>Based in Chickago I love playing tennis and loud music</p>
 			</div>
 			<div class="partners__card">
@@ -68,8 +68,8 @@
 					<div class="partners__card__img__icon yellow-icon">
 					</div>
 				</div>
-				<h2>Lucas Marsha</h2>
-				<p>Based in Chickago I love playing tennis and loud music</p>
+				<h4>Lucas Marsha</h4>
+				<p>I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards</p>
 			</div>
 			<div class="partners__card">
 				<div class="partners__card__img">
@@ -77,37 +77,37 @@
 					<div class="partners__card__img__icon blue-icon">
 					</div>
 				</div>
-				<h2>Bradley Hunter</h2>
+				<h4>Bradley Hunter</h4>
 				<p>Based in Chickago I love playing tennis and loud music</p>
 			</div>
 		</div>
 		<button class="white-btn">See other partners</button>
 		
-		<h1 class="h1-ideas">Discover holiday activity ides</h1>
+		<h2 class="h1-ideas">Discover holiday activity ides</h2>
 		<div class="ideas">
 			<div class="ideas__card1">
-				<h1>Sport and Activity</h1>
+				<h2>Sport and Activity</h2>
 			</div>
 			<div class="ideas__card2">
-				<h1>Wellnes and Health</h1>
+				<h2>Wellnes and Health</h2>
 			</div>
 			<div class="ideas__card3">
-				<h1>Extreme Sports and Expeditions</h1>
+				<h2>Extreme Sports and Expeditions</h2>
 			</div>
 			<div class="ideas__card4">
-				<h1>Games</h1>
+				<h2>Games</h2>
 			</div>
 			<div class="ideas__card5">
-				<h1>Culture and Education</h1>
+				<h2>Culture and Education</h2>
 			</div>
 			<div class="ideas__card6">
-				<h1>Relaxation</h1>
+				<h2>Relaxation</h2>
 			</div>
 			<div class="ideas__card7">
-				<h1>Travelling</h1>
+				<h2>Travelling</h2>
 			</div>
 		</div>
-		<h1> Discover holiday activity ideas</h1>
+		<h2> Discover holiday activity ideas</h2>
 		<h3 class="h3-hi">Hi! What are your holiday interests?</h3>
 		<form>
 			<div class="form">
@@ -118,17 +118,19 @@
 	</div>
 	<footer>
 		<div class="down">
-			<div class="logo">DREAMSHARE</div>
-			<div class="down__part">
-				<span>Company</span>
-				<div class="down__part__flex">
-				<h4>About</h4>
-				<h4>Contacts</h4>
-				<h4>Press</h4>
-				<h4>Blog</h4>
+			<div class="left">
+				<div class="logo">DREAMSHARE</div>
+				<div class="down__part">
+					<span>Company</span>
+					<div class="down__part__flex">
+					<h4>About</h4>
+					<h4>Contacts</h4>
+					<h4>Press</h4>
+					<h4>Blog</h4>
+					</div>
 				</div>
 			</div>
-			<div class="down__part">Partners</div>
+			<div class="down__part right">Partners</div>
 			<div class="down__right">
 				<div class="design">DESIGNED BY</div>
 				<img src="img/areto.png">
